Feat: Simple user listing in UI

--- a/ui/src/app/App.scss
+++ b/ui/src/app/App.scss
@@ -1,5 +1,6 @@
 /* Template dependencies */
 @import '~bootstrap/scss/bootstrap.scss';
+@import '~animate.css/animate.css';
 
 html, body {
   height: 100%;
