--- a/ui/src/app/App.scss
+++ b/ui/src/app/App.scss
@@ -1,10 +1,21 @@
 /* Template dependencies */
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~animate.css/animate.css';
+@import './Icons.scss';
 
-html, body {
+html,
+body {
   height: 100%;
   min-height: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  vertical-align: middle;
 }
 
 #react-root {
