--- a/ui/src/views/auth/Account.scss
+++ b/ui/src/views/auth/Account.scss
@@ -4,38 +4,25 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-top: 40px;
+  padding-bottom: 64px;
   background-color: #f5f5f5;
   justify-content: center;
   transition: all .5s linear;
-
+  .card {
+    max-width: 480px;
+    width: 60%;
+    @media only screen and (max-width: 1000px) {
+      width: inherit;
+      min-width: 50%;
+    }
+  }
   .form-account-title {
     display: flex;
     flex-direction: row;
     align-content: center;
-
     h3 {
       line-height: inherit;
       flex: 1;
     }
-  }
-
-  .list-group-item-heading {
-    font-size: 0.8rem;
-    font-weight: bold;
-    vertical-align: middle;
-  }
-
-  .list-group-item {
-    padding: 0.75rem 0.95rem;
-  }
-  
-  .list-group-item-text {
-    margin-bottom: 0px;
-    vertical-align: middle;
-  }
-
-  .edit-btn {
-    margin-top: -12px;
   }
 }
