--- a/ui/src/app/Icons.scss
+++ b/ui/src/app/Icons.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://use.fontawesome.com/releases/v5.0.13/css/all.css');
 
 .md-text {
   vertical-align: middle;
