--- a/ui/src/views/auth/Recover.scss
+++ b/ui/src/views/auth/Recover.scss
@@ -1,4 +1,4 @@
-.form-signin-container {
+.form-recover-container {
   height: 100%;
   min-height: 100%;
   display: -ms-flexbox;
@@ -10,7 +10,7 @@
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-recover {
   width: 100%;
   max-width: 330px;
   padding: 15px;
@@ -28,29 +28,19 @@
   .form-control:focus {
     z-index: 2;
   }
-  input[type="email"] {
+  input[name="name"] {
+    margin-top: 48px;
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
-  input[type="password"] {
-    margin-bottom: 10px;
+  input[name="email"] {
+    margin-bottom: -1px;
+    border-radius: 0;
+  }
+  input[name="password"] {
+    margin-bottom: 22px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-  }
-  .divider {
-    width: 100%;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-
-    .divider-dash {
-      flex: 1;
-      height: 1px;
-      margin: 8px;
-      background-color: #000;
-    }
   }
 }
