--- a/ui/src/views/auth/Password.scss
+++ b/ui/src/views/auth/Password.scss
@@ -1,4 +1,4 @@
-.form-recover-container {
+.form-password-container {
   height: 100%;
   min-height: 100%;
   display: -ms-flexbox;
@@ -10,7 +10,7 @@
   background-color: #f5f5f5;
 }
 
-.form-recover {
+.form-password {
   width: 100%;
   max-width: 330px;
   padding: 15px;
@@ -28,7 +28,17 @@
   .form-control:focus {
     z-index: 2;
   }
+  input[name="name"] {
+    margin-top: 48px;
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
   input[name="email"] {
+    margin-bottom: -1px;
+    border-radius: 0;
+  }
+  input[name="password"] {
     margin-bottom: 22px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
